test/unique/neg/local-object2.check
local-object2.scala:11: error: capability of right-hand side is not shared
    O.x = Some(this)
              ^
one error found
